appId: com.mawaqit.androidtv
---
- launchApp
- waitForAnimationToEnd

- tapOn: "Got it"

# Wait for app to be ready
- extendedWaitUntil:
    visible: "السلام عليكم و رحمة الله و بركاته ٫ حللتم أهلا ونزلتم سهلا"
    timeout: 40000

# === ACTIVATE DEVELOPER MODE TO ACCESS AFTER SALAH HADITH ===
# Open the drawer
- pressKey: Remote Dpad Left
- waitForAnimationToEnd

- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down
- pressKey: Remote Dpad Down

- tapOn: ".*Supplication.*"

# Test the title without diacritics
- assertVisible: ".*الدعاء لا يرد بين الأذان والإقامة.*"

# Test the hadith text (from the body)
- assertVisible: ".*عن أنس بن مالك قال.*"
- assertVisible: ".*عن أنس بن مالك قال: قال رسول الله صلَّى اللهُ عليه وسلَّم:.*"

# Test the English parts
- assertVisible: ".*Anas bin Malik said.*"
- assertVisible: ".*The supplication does not return.*"
- assertVisible: ".*between the call to prayer and the standing.*"
